--- a/docker-compose.gpu.yaml
+++ b/docker-compose.gpu.yaml
@@ -1,11 +1,8 @@
 services:
-  llm:
-    image: docker.io/adithyn/ollama-custom:qwen-2.5-0.5b
+  metafog-model:
+    image: docker.io/metafogio/ai-search-llm:latest
     ports:
       - 11434:11434
-    networks:
-      - metafog-network
-    restart: unless-stopped
     deploy:
       resources:
         reservations:
@@ -13,15 +10,46 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
-      
+    networks:
+      - metafog-network
+    restart: unless-stopped
 
-  search-engine:
-    image: docker.io/adithyn/searxng-custom:latest
+  metafog-bot:
+    image: docker.io/metafogio/searxng:latest
     ports:
       - 11020:8080
     networks:
       - metafog-network
     restart: unless-stopped
 
+  metafog-node:
+    image: docker.io/metafogio/ai-search-node:latest
+    environment:
+      - SEARXNG_API_URL=http://metafog-bot:8080
+      - METAFOG_PROVIDER_KEY=33d40df9-8328-44e5-bd2a-bae8ce51ac65
+    depends_on:
+      - metafog-bot
+      - metafog-model
+    ports:
+      - 11030:3001
+    cap_add:
+      - NET_ADMIN
+      - SYS_ADMIN
+      - SYS_RESOURCE
+    volumes:
+      - backend-dbstore:/home/metafog/data
+      - uploads:/home/metafog/uploads
+      - netbird-config:/var/lib/netbird
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    networks:
+      - metafog-network
+    restart: unless-stopped
+
 networks:
   metafog-network:
+
+volumes:
+  backend-dbstore:
+  uploads:
+  netbird-config:
